# diplom

./: .gitignore  README.md
back-end/: alembic.ini  main.py  pyproject.toml  taskiq_worker.py
back-end/migrations/: env.py
back-end/migrations/versions/: 251ae6c1b2fb_.py  53f5bffe60e3_change_playlists_traks_amount_to_.py  56eaf928ef8c_.py  637eca9d7b24_.py  8fb5445fcceb_change_playlists_traks_amount_to_.py  c1de847e26b4_init.py  c4062877857d_.py  efe57a63c824_add_trackfeatures.py
back-end/src/: admin.py  broker_taskiq.py  config.py  database.py  repository.py  repository_depricated.py  utils.py
back-end/src/app/: auth.py  depend.py  models.py  routes.py  schemas.py  services.py  tasks.py
front-end/: package-lock.json
front-end/app/routes/: home.tsx
reactapp/: .cta.json  package-lock.json  package.json  tsconfig.json
reactapp/src/: auth.tsx  main.tsx  routeTree.gen.ts  styles.css
reactapp/src/APIs/: PlaylistService.ts  StatService.ts  UserService.ts
reactapp/src/components/: Footer.tsx  Header.tsx  PlayList.tsx  PlaylistItem.tsx  Recomendations.tsx  SearchedTrack.tsx  SearchedTrackMini.tsx  Track.tsx  TrackList.tsx  TrackMini.tsx  YoutubePlayer.tsx
reactapp/src/lib/: utils.ts
reactapp/src/routes/: __root.tsx  account.tsx  home.tsx  index.tsx  login.tsx  logout.tsx  playpage.tsx  regestration.tsx
