[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "icecream>=2.1.4",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "sqladmin>=0.20.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "uuid6>=2024.7.10",
    "uvicorn[all]>=0.34.2",
]
